--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Async traits using nightly features"
 keywords = ["async", "async-trait", "nightly"]
 edition = "2021"
 license = "Unlicense"
+exclude = ["benches/*", "tests/*"]
 
 [lib]
 proc-macro = true
@@ -15,6 +16,8 @@ quote = "1"
 proc-macro2 = "1.0"
 syn = { version = "1.0", features = ["full"] }
 rustversion = "1.0"
+
+
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["async_tokio"] }
