--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,13 +14,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo +nightly build
-    - name: Run tests
-      run: cargo +nightly test
-    - name: Set Nightly
-      run: rustup override set nightly
-    - uses: boa-dev/criterion-compare-action@v3.0.0
-      with:
-        branchName: ${{ github.base_ref }}
+      - uses: actions/checkout@v3
+      - name: Install Nightly
+        run: rustup toolchain install nightly
+      - name: Build
+        run: cargo +nightly build
+      - name: Run tests
+        run: cargo +nightly test
+      - name: Set Nightly
+        run: rustup override set nightly
+      - uses: boa-dev/criterion-compare-action@v3.0.0
+        with:
+          branchName: ${{ github.base_ref }}
