--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,3 +26,4 @@ jobs:
       - uses: boa-dev/criterion-compare-action@v3.0.0
         with:
           branchName: ${{ github.base_ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
