Added github token

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,3 +28,4 @@ jobs:
         with:
           tool: 'cargo'
           output-file-path: output.txt
+          github-token: ${{ secrets.GITHUB_TOKEN }}
